<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Tutorial">

    <ImageView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tutorial"/>

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/tutorial"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back2"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back"
        android:contentDescription="@string/kembali"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_1"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/screen_2_red"
                android:contentDescription="@string/tutorial_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tutorial_2"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/tutorial_1"
                android:contentDescription="@string/tutorial_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tutorial_3"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/tutorial_1"
                android:contentDescription="@string/tutorial_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tutorial_4"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/tutorial_1"
                android:contentDescription="@string/tutorial_4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tutorial_5"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/tutorial_1"
                android:contentDescription="@string/tutorial_5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tutorial_6"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/tutorial_1"
                android:contentDescription="@string/tutorial_6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tutorial_7"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/tutorial_1"
                android:contentDescription="@string/tutorial_7"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>