<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tutorial"/>

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/hasil"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back3"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back"
        android:contentDescription="@string/kembali"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/Head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start|top"
                android:id="@+id/desc"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:focusable="false"
                android:editable="false"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@+id/Head" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>